fixed the overlap issue when vh shifts

--- a/assets/css/layout/section.css
+++ b/assets/css/layout/section.css
@@ -1,4 +1,4 @@
 section {
     scroll-margin-top: 82px;
-    height: 100vh;
+    min-height: 100vh;
 }
